# sisr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sisr.spec
.github/workflows/: release-macos.yml
docs/: crops.html  guide.html  index.html
docs/assets/: style.css
resources/: create_icon.py  icon.icns
scripts/release/: README.md  macos-build-sign-notarize.sh
sisr/: __init__.py  __main__.py  core.py  gui.py  preferences.py  utils.py
sisr/tests/: conftest.py  test_cli.py  test_preferences.py
