[build-system]
requires = ["setuptools>=68", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "sisr"
version = "0.4.0"
description = "Simple Image Sequence Renderer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Dave Klee", email = "dave@timelapsetech.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Pillow>=12.0.0",
    "piexif>=1.1.3",
    "tqdm>=4.67.0",
    "PyQt6>=6.7.0",
    "imageio-ffmpeg>=0.6.0",
]

[project.scripts]
sisr = "sisr:main"
sisr-gui = "sisr.gui:main"

[tool.setuptools]
packages = ["sisr"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["sisr/tests"]
python_files = ["test_*.py"]
addopts = "-v"
